--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -58,7 +58,7 @@ jobs:
         run: echo "$BRANCH_NAME"
 
       - name: build openid federation specs
-        run: xml2rfc --html rp-metadata-choices-1_0.xml --out html/$BRANCH_NAME.html
+        run: xml2rfc --html openid-connect-rp-metadata-choices-1_0.xml --out html/$BRANCH_NAME.html
 
       - name: Deploy to GitHub Pages
         if: success()
